# ChangeLog for net-analyzer/sara
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sara/ChangeLog,v 1.8 2004/09/04 18:26:12 squinky86 Exp $

  04 Sep 2004; Jon Hood <squinky86@gentoo.org> sara-5.1.1a.ebuild:
  Stable on x86.

  07 Aug 2004; Jon Hood <squinky86@gentoo.org> sara-5.0.5b.ebuild,
  sara-5.1.1a.ebuild:
  Ebuild cleanups thanks to Antonio <netbix@tiscali.it>, #59612.
  DEPEND on net-misc/netkit-fingerd.

*sara-5.1.1a (05 Aug 2004)

  05 Aug 2004; Jon Hood <squinky86@gentoo.org> sara-5.0.5b.ebuild,
  +sara-5.1.1a.ebuild:
  Stable x86 and testing version bumps.

  18 Jun 2004; David Holm <dholm@gentoo.org> sara-5.0.5b.ebuild:
  Added to ~ppc.

  15 Jun 2004; Jon Hood <squinky86@gentoo.org> sara-5.0.5b.ebuild:
  RESTRICT=nomirror because of license

*sara-5.0.5b (15 Jun 2004)

  15 Jun 2004; Jon Hood <squinky86@gentoo.org> +sara-5.0.5b.ebuild:
  Initial commit. Closes #40097. Thanks to Diego Garcia <diego@envigo.net> for
  the ebuild.
