@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/sara
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sara/ChangeLog,v 1.8 2004/09/04 18:26:12 squinky86 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sara/ChangeLog,v 1.9 2004/12/09 20:31:06 squinky86 Exp $
+
+*sara-5.2.0a (09 Dec 2004)
+
+  09 Dec 2004; Jon Hood <squinky86@gentoo.org> +files/sara,
+  +sara-5.2.0a.ebuild:
+  Version bump.
 
   04 Sep 2004; Jon Hood <squinky86@gentoo.org> sara-5.1.1a.ebuild:
   Stable on x86.
